# mas

./: .gitignore  .gitmodules  CLAUDE.md  README.md  colcon_build_debug.sh
.claude/commands/: update-progress.md
bag/: rosbag_qos_overrides.yaml  rosbag_record.sh  rosbag_record_reduced.sh
drone_config/: robot.env.template
drone_config/dds/: cyclonedds_local_only.xml  cyclonedds_local_only_px4_1.xml  cyclonedds_local_only_px4_2.xml  fastdds_local_only.xml
drone_config/mavros/: install_mavros.sh  mavros_param.yaml
drone_config/network/: 01-netcfg.yaml  inter-jetson-block.service  inter-jetson-block.sh
drone_config/px4/: bringup.md  calc_ag_ip.py  dds_xrce_profile.xml  install_micro_xrce_agent.sh  install_px4_msgs.sh
drone_config/udev/: 99-pixhawk.rules
drone_config/usb_cam/: calib_a8mini.yaml  calib_a8mini_720p.yaml  params.yaml
drone_config/zenoh/: zenoh_bridge_px4_1.json5  zenoh_bridge_px4_2.json5
rviz2/: multiview.rviz
src/: ARCHITECTURE.md  ARCHITECTURE_IMPLEMENTATION_LEVEL.md  ARCHITECTURE_SEMANTIC_LEVEL.md  CLAUDE.md  ai_workflow.md  harness_rationale.md  qrispy_workflow.md
src/.claude/: settings.json
src/doc/: frame_conventions.md  mas_mission_spec.md  mavros_replicator_spec.md
src/gimbal_controller/: .gitmodules  CONTEXT.md  README_calibration.md  package.xml  setup.py
src/image2rtsp/: README.md  package.xml
src/image2rtsp/config/: parameters.yaml
src/image2rtsp/include/: image2rtsp.hpp
src/image2rtsp/src/: image2rtsp.cpp  video.cpp
src/mas_bearing_loc/: CONTEXT.md  ekf-convergence-explorer.jsx  package.xml  setup.cfg  setup.py
src/mas_bearing_loc/config/: dc_ekf_params.yaml
src/mas_bearing_loc/doc/: DC_EKF_PERFORMANCE_NOTES.md  DC_EKF_VS_LOS_RATE_METHOD.md  EKF_VARIANTS_BENCHMARK.md  Z_OBSERVABILITY_AND_FRAMES.md
src/mas_bearing_loc/launch/: compare_ekfs.launch.py  dc_ekf.launch.py  raw_los.launch.py
src/mas_bearing_loc/mas_bearing_loc/: bearing_residual_monitor.py  camera_model.py  dc_ekf.py  dc_ekf_node.py  direct_projection_ekf.py  direct_projection_ekf_node.py  imu_buffer.py  quaternion.py  raw_los_node.py  simple_ekf.py  simple_ekf_node.py
src/mas_bearing_loc/tests/: run_tests.py
src/mas_common_frame/: CONTEXT.md  package.xml  setup.cfg  setup.py
src/mas_coop_mock/: package.xml  setup.cfg  setup.py
src/mas_coop_mock/launch/: coop_mock.launch.py
src/mas_coop_mock/mas_coop_mock/: core.py  cv_smoother_node.py  peer_ray_node.py  ray_delay_node.py  viewing_offset_node.py
src/mas_coop_mock/test/: test_core.py
src/mas_mission/: CONTEXT.md  package.xml  setup.cfg  setup.py
src/mas_msgs/: CMakeLists.txt  package.xml
src/mas_msgs/msg/: TargetRay.msg  TargetRayArray.msg  TargetRayArrayWithCov.msg  TriangulatedPoint.msg  TriangulatedPointArray.msg
src/mas_multiview/: CMakeLists.txt  CONTEXT.md  launch.sh  package.xml  run.sh
src/mas_multiview/lib/multiview_triangulation/: CMakeLists.txt
src/mas_multiview/lib/multiview_triangulation/include/: camera.h  camera_ray_to_enu.h  cartesian_product.h  covariance_propagation.h  detection.h  multiview_triangulation.h  ray.h  reprojection.h
src/mas_multiview/lib/multiview_triangulation/src/: covariance_propagation.cpp  multiview_triangulation.cpp
src/mas_multiview/lib/multiview_triangulation/test/: cartesian_product.cpp  test_transmitted_ray.cpp
src/mas_multiview_fgo/: CMakeLists.txt  CONTEXT.md  package.xml
src/mas_multiview_fgo/launch/: coop_smoother.launch.py  ego_smoother.launch.py
src/mas_multiview_fgo/lib/coop_smoother/: CMakeLists.txt
src/mas_multiview_fgo/lib/coop_smoother/include/: coop_smoother.h  coop_smoother_fl.h  ego_camera.h  factors.h  meas_noise.h  output_gate.h  pose_interp.h
src/mas_multiview_fgo/lib/coop_smoother/test/: test_coop_node.py  test_coop_smoother.cpp
src/mas_multiview_fgo/src/: coop_smoother_node.cpp
src/mas_multiview_fgo/tools/: replay_coop_smoother.cpp
src/mas_offboard/: CONTEXT.md  package.xml  setup.cfg  setup.py
src/mas_operator/: CONTEXT.md  package.xml  setup.cfg  setup.py
src/mas_pn_guidance/: CONTEXT.md  package.xml  setup.cfg  setup.py
src/mas_pn_guidance/config/: pn_guidance.yaml  px4_bands.yaml  roles.yaml
src/mas_pn_guidance/experiments/: EXPERIMENT.md  run_sweep.py
src/mas_pn_guidance/experiments/analysis/: boot_table.py  plot_boundary_3arm.py  qa_target_tracking.py
src/mas_pn_guidance/experiments/manifests/: baseline_straight.yaml  mechanism_map_straight.yaml  s2_baseline_matched.yaml  s2_capture_trackB.yaml  s2_capture_trackB_T10.yaml  s2_smoother.yaml  s2_smoother_full.yaml  s2_smoother_matched.yaml  s2_smoother_matched2.yaml  s7_matched_rerun.yaml  template.yaml  ticket010_n2_old_sweep.yaml
src/mas_pn_guidance/experiments/profiles/: engagement_ekf_INTER.launch.py  engagement_ekf_OLD.launch.py  engagement_ekf_TUNED.launch.py  install_profile.sh  pn_N2.yaml
src/mas_pn_guidance/launch/: experiment_conductor.launch.py  pn_guidance.launch.py
src/mas_pn_guidance/mas_pn_guidance/: active_sensing.py  ego_weave.py  experiment_conductor.py  fim_mpc_online.py  gimbal_gt_tracker.py  los_rate.py  pn_guidance_node.py  pn_law.py  roles.py  set_px4_limits.py
src/mas_pn_guidance/tests/: test_active_sensing.py  test_ego_weave.py  test_los_rate.py  test_pn_law.py
src/mas_policy/: .gitignore  CONTEXT.md  package.xml  setup.cfg  setup.py
src/mas_tracker/: CMakeLists.txt  CONTEXT.md  package.xml
src/mas_tracker/include/mas_tracker/: hungarian.h  kalman_filter.h  sort3d.h  sort3d_node.h
src/mas_tracker/launch/: sort3d.launch.py
src/mas_tracker/src/: hungarian.cpp  sort3d.cpp  sort3d_node.cpp
src/mavros_replicator/: CONTEXT.md  package.xml  setup.cfg  setup.py
src/mavros_replicator/launch/: replicator.launch.py
src/mavros_replicator/mavros_replicator/: frames.py  replicator_node.py
src/mavros_replicator/test/: test_frames.py
src/rtsp_camera/: CMakeLists.txt  README.md
tmux/: bridge_topics_px4_1.yaml  bridge_topics_px4_2.yaml  camera_yolo.yaml  drone.tmuxp.yaml  monitor_topics.tmuxp.yaml  multiview.tmuxp.yaml  simdrone1.tmuxp.yaml  simdrone2.tmuxp.yaml  simdrone3.tmuxp.yaml  zoom.tmux.yaml
(+310 files in other folders)
