<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image2rtsp</name>
  <version>0.0.0</version>
  <description>topic to RTSP stream package</description>
  <maintainer email="dmalad@rptu.de">dmitry</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>python3-opencv</depend>

  <build_depend>gstreamer1.0-plugins-base</build_depend>
  <build_depend>gstreamer1.0-plugins-good</build_depend>
  <build_depend>gstreamer1.0-plugins-bad</build_depend>
  <build_depend>gstreamer1.0-plugins-ugly</build_depend>
  <build_depend>libgstrtspserver-1.0-dev</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
