<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mas_multiview_fgo</name>
  <version>0.0.0</version>
  <description>Cooperative factor-graph smoother (GTSAM) — measurement-time-aware target-trajectory
  fusion of ego pixels + transmitted peer bearings; publishes pose + velocity (ticket 024).</description>
  <maintainer email="seungwook1024@gmail.com">usrg</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- GTSAM is a standalone C++ dependency found via find_package(GTSAM); not a rosdep key. -->
  <depend>rclcpp</depend>
  <depend>mas_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>std_msgs</depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
